# 576_hw1

./: .gitignore  color_gradient.rgb  lake-forest_352x288.rgb  miamibeach_352x288.rgb  mountain_352x288.rgb  rubixcube_352x288.rgb  skyclouds_352x288.rgb  stagforest_352x288.rgb  worldmap_352x288.rgb  zip.txt
ImageDisplay_C++_cross_platform/: CMakeLists.txt  DCT_README.md  README.md  analysis.csv
ImageDisplay_C++_cross_platform/dependency/wxWidgets/src/png/: pngpriv.h
ImageDisplay_C++_cross_platform/src/: Analysis.cpp  ColorSpace.cpp  ColorSpace.h  Config.cpp  Config.h  DCT.cpp  DCT.h  DCTApp.cpp  ImageIO.cpp  ImageIO.h  Main.cpp  Metrics.cpp  Metrics.h  Quantizer.cpp  Quantizer.h
